# freq_count

./: CMakeLists.txt  main.cpp
freq_count/: CMakeLists.txt  additional_functions.cpp  additional_functions.hpp  consts.hpp  file_operator.cpp  file_operator.hpp  freq_counter.cpp  freq_counter.hpp  main.cpp  result_printer.cpp  result_printer.hpp  text_manipulator.cpp  text_manipulator.hpp
freq_count/include/: consts.hpp  file_operator.hpp
freq_count/source/: file_operator.cpp
main/: CMakeLists.txt  main.cpp
main/freq_count/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/: CMakeLists.txt
test/src/: CMakeLists.txt  additional_functions_test.cpp  file_operator_test.cpp  freq_counter_test.cpp  result_printer_test.cpp  test.cpp  text_manipulator_test.cpp
